--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,33 @@
 @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap');
+@import './variable.scss';
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
+body {
+  background-color: #212227;
+  background-image: url('../assets/asfalt-light.webp');
+  min-height: 100vh;
+  max-width: 100vw;
+  font-family: 'Orbitron';
+  font-weight: 900;
+  color: $white-smoke;
+  overflow-x: hidden;
+}
+
+a {
+  text-decoration: none;
+}
+
+ul {
+  list-style: none;
+}
+
+@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap');
+@import './variable.scss';
+@import './mixin.scss';
 
 * {
   box-sizing: border-box;
@@ -8,11 +37,13 @@
 
 body {
   background-color: #212227;
-  background-image: url('https://www.transparenttextures.com/patterns/asfalt-light.png');
+  background-image: url('../assets/asfalt-light.webp');
   min-height: 100vh;
   max-width: 100vw;
   font-family: 'Orbitron';
   font-weight: 900;
+  color: $white-smoke;
+  overflow-x: hidden;
 }
 
 a {
@@ -21,4 +52,17 @@ a {
 
 ul {
   list-style: none;
+}
+
+p {
+  font-size: 18px;
+  letter-spacing: 2.5px;
+  @include tablet {
+    font-size: 16px;
+    letter-spacing: 0.8px;
+  }
+  @include mobile {
+    font-size: 16px;
+    letter-spacing: normal;
+  }
 }
