--- a/src/container/Presentation/presentation.scss
+++ b/src/container/Presentation/presentation.scss
@@ -100,16 +100,16 @@
 .intro::before,
 .intro::after {
   content: '';
-  background-color: #fab5704c;
+  background-color: $gold;
   position: absolute;
 }
 
 .intro::before {
   border-radius: 50%;
-  width: 15rem;
-  height: 15rem;
-  bottom: 5%;
-  right: 5%;
+  width: 5rem;
+  height: 5rem;
+  bottom: 15%;
+  right: 15%;
   filter: blur(100px);
 }
 
@@ -153,5 +153,5 @@
 
 .intro .cadre:hover {
   box-shadow: 0px 0px 20px 1px $gold;
-  border: 1px solid rgba(255, 255, 255, 0.454);
+  border: 1px solid $light-gray;
 }
