--- a/src/components/project/projectsCard.scss
+++ b/src/components/project/projectsCard.scss
@@ -9,8 +9,22 @@
   justify-content: center;
 }
 
+.link {
+  width: 30%;
+  display: flex;
+  justify-content: center;
+
+  @include tablet {
+    width: 40%;
+  }
+
+  @include mobile {
+    width: 80%;
+  }
+}
+
 .card {
-  width: 450px;
+  width: 100%;
   height: 300px;
   background: $dark-gray;
   border-radius: 20px;
@@ -21,6 +35,7 @@
   color: $dark-blue;
   text-shadow: 0 0 10px $dark-gray;
   transition: 0.2s ease-in-out;
+  position: relative;
 
   @include mobile {
     max-width: 100%;
@@ -28,12 +43,13 @@
 }
 
 .img {
-  width: 440px;
+  width: 100%;
   height: 290px;
   border-radius: 20px;
   position: absolute;
   transition: 0.2s ease-in-out;
   z-index: 1;
+  object-fit: cover;
   @include mobile {
     max-width: 100%;
     object-fit: cover;
