--- a/src/container/Presentation/presentation.scss
+++ b/src/container/Presentation/presentation.scss
@@ -32,6 +32,7 @@
       display: flex;
       align-items: center;
       justify-content: space-evenly;
+      margin-top: 20px;
 
       @include mobile {
         justify-content: center;
