add projects description/link | fix css mobile

--- a/src/container/Presentation/presentation.scss
+++ b/src/container/Presentation/presentation.scss
@@ -18,7 +18,7 @@
     flex-direction: column;
     gap: 45px;
     max-width: 95%;
-    margin-left: 3%;
+    margin: 0 3%;
     @include tablet {
       max-width: 100%;
     }
@@ -35,7 +35,6 @@
       margin-top: 20px;
 
       @include mobile {
-        justify-content: center;
         margin-right: -35px;
       }
       & a {
