fix css tools/language | add gh-pages

--- a/src/components/tools/tools.scss
+++ b/src/components/tools/tools.scss
@@ -17,4 +17,10 @@
   &_img {
     margin-bottom: 5px;
   }
+
+  &_display {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 }
