--- a/src/components/language/language.scss
+++ b/src/components/language/language.scss
@@ -22,4 +22,10 @@
   &_img {
     margin-bottom: 5px;
   }
+
+  &_display {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 }
