--- a/src/components/project/projectsCard.scss
+++ b/src/components/project/projectsCard.scss
@@ -44,12 +44,13 @@
 
 .img {
   width: 100%;
-  height: 350px;
+  height: 100%;
   border-radius: 20px;
   position: absolute;
   transition: 0.2s ease-in-out;
   z-index: 1;
   object-fit: cover;
+  filter: brightness(75%);
   @include mobile {
     max-width: 100%;
     object-fit: cover;
@@ -113,7 +114,7 @@
   & > .img {
     width: 85%;
     height: 85%;
-    filter: blur(10px);
+    filter: blur(10px) brightness(75%);
     animation: anim 3s infinite;
   }
 }
