--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -29,8 +29,8 @@ ul {
 }
 
 p {
-  text-align: justify;
-  font-size: 18px;
+  // text-align: justify;
+  font-size: 16px;
   letter-spacing: 2.5px;
   @include tablet {
     font-size: 16px;
